@@ -1,50 +1,0 @@
-/**
- * This file was created by Quorum Born IT <http://www.qub-it.com/> and its 
- * copyright terms are bind to the legal agreement regulating the FenixEdu@ULisboa 
- * software development project between Quorum Born IT and Serviços Partilhados da
- * Universidade de Lisboa:
- *  - Copyright © 2015 Quorum Born IT (until any Go-Live phase)
- *  - Copyright © 2015 Universidade de Lisboa (after any Go-Live phase)
- *
- * Contributors: paulo.abrantes@qub-it.com
- *
- * 
- * This file is part of FenixEdu fenixedu-ulisboa-cgdIntegration.
- *
- * FenixEdu fenixedu-ulisboa-cgdIntegration is free software: you can redistribute it and/or modify
- * it under the terms of the GNU Lesser General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- *
- * FenixEdu fenixedu-ulisboa-cgdIntegration is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public License
- * along with FenixEdu fenixedu-ulisboa-cgdIntegration.  If not, see <http://www.gnu.org/licenses/>.
- */
-package org.fenixedu.ulisboa.specifications.domain.student.access.importation.external.cgd;
-
-import org.fenixedu.academic.domain.student.Registration;
-import org.fenixedu.ulisboa.specifications.domain.student.access.importation.external.SyncRegistrationWithExternalServices;
-
-import com.qubit.solution.fenixedu.integration.cgd.services.form43.CgdForm43Sender;
-
-public class SyncRegistrationWithCgd implements SyncRegistrationWithExternalServices {
-
-    private CgdForm43Sender sender = null;
-
-    private CgdForm43Sender getSender() {
-        if (sender == null) {
-            sender = new CgdForm43Sender();
-        }
-        return sender;
-    }
-
-    @Override
-    public boolean syncRegistrationToExternal(Registration registration) {
-        return getSender().sendForm43For(registration);
-    }
-
-}
