@@ -1,3 +1,6 @@
+- Refactor: Deprecated class StudentAccessServices
+- Refactor: Deleted StudentAccessServices syncRegistrationToExternal method
+
 6.25.4 (26-07-2021)
 - Refactor: Due to TreasuryDomainException and AcademicTreasuryDomainException hierarchy changes, this module must be built in order for the platform to run
 
